tests/specs/graph/fast_check/cache__diagnostic_deep.txt
~~ {"fastCheckCache":true} ~~
# https://jsr.io/@scope/a/meta.json
{"versions": { "1.0.0": {} } }

# https://jsr.io/@scope/a/1.0.0_meta.json
{ "exports": { ".": "./mod.ts" } }

# https://jsr.io/@scope/a/1.0.0/mod.ts
export * from "./a.ts";

# https://jsr.io/@scope/a/1.0.0/a.ts
export * from "./b.ts";

# https://jsr.io/@scope/a/1.0.0/b.ts
export * from "./c.ts";

# https://jsr.io/@scope/a/1.0.0/c.ts
export function add(a: number, b: number) {
  return Math.random();
}

# mod.ts
// the cache should be a hash of all the files
import 'jsr:@scope/a'

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "jsr:@scope/a",
          "code": {
            "specifier": "jsr:@scope/a",
            "span": {
              "start": {
                "line": 1,
                "character": 7
              },
              "end": {
                "line": 1,
                "character": 21
              }
            }
          }
        }
      ],
      "size": 69,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    },
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "./b.ts",
          "code": {
            "specifier": "https://jsr.io/@scope/a/1.0.0/b.ts",
            "span": {
              "start": {
                "line": 0,
                "character": 14
              },
              "end": {
                "line": 0,
                "character": 22
              }
            }
          }
        }
      ],
      "size": 24,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/a.ts"
    },
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "./c.ts",
          "code": {
            "specifier": "https://jsr.io/@scope/a/1.0.0/c.ts",
            "span": {
              "start": {
                "line": 0,
                "character": 14
              },
              "end": {
                "line": 0,
                "character": 22
              }
            }
          }
        }
      ],
      "size": 24,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/b.ts"
    },
    {
      "kind": "esm",
      "size": 70,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/c.ts"
    },
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "./a.ts",
          "code": {
            "specifier": "https://jsr.io/@scope/a/1.0.0/a.ts",
            "span": {
              "start": {
                "line": 0,
                "character": 14
              },
              "end": {
                "line": 0,
                "character": 22
              }
            }
          }
        }
      ],
      "size": 24,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/mod.ts"
    }
  ],
  "redirects": {
    "jsr:@scope/a": "https://jsr.io/@scope/a/1.0.0/mod.ts"
  },
  "packages": {
    "@scope/a": "@scope/a@1.0.0"
  }
}

Fast check https://jsr.io/@scope/a/1.0.0/mod.ts:
  error[unknown-return-type]: unknown return type for function in the public API
   --> https://jsr.io/@scope/a/1.0.0/c.ts:1:17
    |
  1 | export function add(a: number, b: number) {
    |                 --- this function's return type could not be inferred
    |
  2 |   return Math.random();
    |   ------ because the value returned here
    |          ------------- contains this expression, of which the type could not be inferred
    |
    = hint: add an explicit return type to the function

    info: all functions in the public API must have an known return type
    info: the type of arbitrary expressions can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-return-type


== fast check cache ==
FastCheckCacheKey(13212997092325944472):
    Deps - []
    Modules: [["https://jsr.io/@scope/a/1.0.0/mod.ts","diagnostic"],["https://jsr.io/@scope/a/1.0.0/a.ts","diagnostic"],["https://jsr.io/@scope/a/1.0.0/b.ts","diagnostic"],["https://jsr.io/@scope/a/1.0.0/c.ts","diagnostic"]]
